# inventory-prtotype

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  conanfile.txt
.github/workflows/: clang-format.yml  cmake.yml  linter.yml
src/: CMakeLists.txt  main.cpp
src/model/: CMakeLists.txt  IIcon.h  ILadder.h  IPlayer.h  IRenderable.h  IScene.h  IWall.h  Icon.cpp  Icon.h  Ladder.cpp  Ladder.h  Player.cpp  Player.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Wall.cpp  Wall.h  classes.puml
src/view_model/: CMakeLists.txt  IEditable.h  Ladder.cpp  Ladder.h  Player.cpp  Player.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  TextureLoader.h  Wall.cpp  Wall.h  classes.puml
tests/: CMakeLists.txt  imgui_test.cpp  test.cpp
tests/model/: CMakeLists.txt  IconTest.cpp  LadderTest.cpp  MockIcon.h  MockRenderable.h  PlayerTest.cpp  RenderableTest.cpp  SceneTest.cpp  WallTest.cpp
tests/view_model/: CMakeLists.txt  MockEditable.h  SceneTest.cpp
